--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ lerna-debug.log*
 
 .history
 package-lock.json
+dist
+lib
+types
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -83,7 +86,6 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
