--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "jsaber",
   "version": "0.0.1",
   "description": "",
-  "main": "lib/jsaber.min.js",
-  "typings": "lib/types/index.d.ts",
+  "main": "dist/jsaber.min.js",
+  "typings": "types/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js"
+    "build": "rollup -c rollup.config.js"
   },
   "repository": {
     "type": "git",
@@ -22,11 +22,14 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "ts-loader": "^6.2.1",
+    "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "rollup": "^1.31.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-uglify": "^6.0.4",
     "tslint": "^6.0.0",
-    "typescript": "^3.7.5",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10"
-  }
+    "typescript": "^3.7.5"
+  },
+  "dependencies": {}
 }
