--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/jsaber.min.js",
   "typings": "types/index.d.ts",
   "scripts": {
-    "build": "gulp"
+    "build": "gulp",
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "rollup": "^1.31.0",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-uglify": "^6.0.4",
+    "standard-version": "^7.1.0",
     "tslint": "^6.0.0",
     "typescript": "^3.7.5"
   },
