--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsaber",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "main": "dist/jsaber.min.js",
   "typings": "types/index.d.ts",
@@ -29,6 +29,7 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "babel-loader": "^8.0.6",
+    "cz-conventional-changelog": "^3.1.0",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-typescript": "^6.0.0-alpha.1",
@@ -40,5 +41,10 @@
     "tslint": "^6.0.0",
     "typescript": "^3.7.5"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
