feat: 修改引入方式
1.修改文件名称
2.修改index.ts文件引入方式。支持两种导出方式

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsaber",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "main": "dist/jsaber.min.js",
   "typings": "types/index.d.ts",
@@ -8,6 +8,7 @@
     "build": "gulp",
     "release": "standard-version"
   },
+  "files": ["dist", "lib", "types"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/namehu/jsaber.git"
