--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "files": [
     "dist",
     "lib",
-    "types"
+    "types",
+    "src"
   ],
   "repository": {
     "type": "git",
@@ -36,8 +37,11 @@
     "babel-loader": "^8.0.6",
     "cz-conventional-changelog": "^3.1.0",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
+    "gulp-terser": "^1.2.0",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "gulp-uglify": "^3.0.2",
     "husky": "^4.2.2",
     "rollup": "^1.31.0",
     "rollup-plugin-babel": "^4.3.3",
