--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "jsaber",
   "version": "0.1.3",
   "description": "",
-  "main": "dist/jsaber.min.js",
+  "main": "dist/jsaber.umd.js",
+  "module": "dist/jsaber.esm.js",
   "typings": "types/index.d.ts",
   "scripts": {
     "build": "gulp",
